--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/auditsetfuncprofilegridpage/auditsetfuncprofilegridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/auditsetfuncprofilegridpage/auditsetfuncprofilegridpage.component.html
@@ -17,55 +17,15 @@
                         <span class="input-group-text custom-input-group-text">
                             <i class="fas fa-search custom-search-icon"></i>
                         </span>
-                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
                     </div>
                       
                 </div>
             </div>
         </div>
     </div>
-    <div class="row p-2">
-        <div class="col">
-            <div class="p-4 bg-white shadow-dark rounded-2">
-                <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['EntityName', 'UserName']"
-                tableStyleClass="table table-striped"
-                [rows]="itemsPerPage"
-                [paginator]="true" 
-                [totalRecords]="types.length"
-                [rowsPerPageOptions]="rowsPerPageOptions"  
-                [rowHover]="true">
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th style="width:100px;">S.No</th>
-                            
-                             <th pSortableColumn="EntityName" style="width:30%">Role Name<p-sortIcon field="EntityName"></p-sortIcon></th>
-                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
-
-                             <th pSortableColumn="UserName" style="width:30%">Initiated By<p-sortIcon field="UserName"></p-sortIcon></th>
-                             <th pSortableColumn="UserName" style="width:30%">Initiated On<p-sortIcon field="UserName"></p-sortIcon></th>
-    
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-doc let-i="rowIndex">
-                        <tr>  
-                            <td>{{ i + 1 }}</td>        
-                            <td>
-                                <a [routerLink]="['/auditadddfunctionalprofile']" [queryParams]="{ DocumentName: doc?.EntityName }">{{doc?.EntityName}}</a>
-                            </td>                
-                           
-                            <!-- <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td> -->
-                            <td>{{doc?.UserName}}</td>
-                            <td>{{doc?.EntityInfo?.createddate | date:'dd/MM/yyyy HH:mm'}}</td>
-                            
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-        </div>
-    </div>
+    <ng-container *ngIf="gridConfig?.gridData?.length>0">
+        <app-audit-common-grid [gridConfig]="gridConfig" [filterAttributes]="globalFilterFields" (action)="handleAction($event)"></app-audit-common-grid>
+      </ng-container>
 </div>
 
 
