--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditeffectivegridpage/auditeffectivegridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditeffectivegridpage/auditeffectivegridpage.component.html
@@ -11,70 +11,13 @@
                     </a>
                 </div>
                 
-                <div class="d-flex page-title-actions">
-                    <div class="input-group custom-input-group">
-                        <!-- Magnifying glass icon -->
-                        <span class="input-group-text custom-input-group-text">
-                            <i class="fas fa-search custom-search-icon"></i>
-                        </span>
-                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
-                   </div>
-                      
-                </div>
+          
             </div>
         </div>
     </div>
-    <div class="row p-2">
-        <div class="col">
-            <div class="p-4 bg-white shadow-dark rounded-2">
-                <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['EntityInfo.documentno', 'EntityInfo.documenttitle', 'Description','EntityInfo.CreatedDate','Status']"
-                tableStyleClass="table table-striped"
-                [rows]="itemsPerPage"
-                [paginator]="true" 
-                [totalRecords]="types.length"
-                [rowsPerPageOptions]="rowsPerPageOptions"  
-                [rowHover]="true">
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>S.No</th>
-                            <th pSortableColumn="EntityName" style="width:20%">Effective Date<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                            <th pSortableColumn="EntityInfo.documentno" style="width:20%">Document Number<p-sortIcon field="EntityInfo.documentno"></p-sortIcon></th>
-                            <th pSortableColumn="EntityInfo.documenttitle" style="width:20%">Document Title<p-sortIcon field="EntityInfo.documenttitle"></p-sortIcon></th>
-                            
-                             <!-- <th pSortableColumn="EntityName" style="width:20%">Review Date<p-sortIcon field="Entity Name"></p-sortIcon></th> -->
-                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
-                             <th pSortableColumn="UserName" style="width:20%">Initiated By</th>
-                              <th pSortableColumn="EntityInfo.CreatedDate" style="width:1n00px">Initiated On<p-sortIcon field="EntityInfo.CreatedDate"></p-sortIcon></th>
-    
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-doc let-i="rowIndex">
-                        <tr>  
-                            <td>{{ i + 1 }}</td> 
-                            <td>
-                                <a [routerLink]="['/auditeffectiveaddpage']" [queryParams]="{ DocumentName: doc?.Unique }">{{doc?.Unique}}</a>
-                            </td>
-                            <td>{{doc?.EntityInfo?.documentno}}</td>
-                            <td>{{doc?.EntityInfo?.documenttitle}}</td>
-
-                         
-
-                           
-                           
-                
-                          
-                            <!-- <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td> -->
-                            <td>{{doc?.UserName}}</td>
-                            <td>{{doc?.EntityInfo?.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-        </div>
-    </div>
+    <ng-container *ngIf="gridConfig?.gridData?.length>0">
+        <app-audit-common-grid [gridConfig]="gridConfig" [filterAttributes]="globalFilterFields" (action)="handleAction($event)"></app-audit-common-grid>
+      </ng-container>
 </div>
 
 
