Changes of summary page

--- a/VlimsApp/ClientApp/src/app/common/audit-common-grid/audit-common-grid.component.html
+++ b/VlimsApp/ClientApp/src/app/common/audit-common-grid/audit-common-grid.component.html
@@ -16,7 +16,7 @@
                       <span class="input-group-text custom-input-group-text">
                           <i class="fas fa-search custom-search-icon"></i>
                       </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
+                      <input type="text" class="form-control custom-input" pInputText (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
                   </div>
                     
               </div>
