--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.html
@@ -1,6 +1,6 @@
 
-<div class="container-fluid">
-  <div class="row">
+<!--<div class="container-fluid">-->
+  <!--<div class="row">
     <div class="col">
       <div class="d-flex justify-content-between align-items-center">
           <h4 class="page-title"><span class="bold-text">Document Type</span><br><span class="bold-text">Audit Trails</span></h4>            <div class="back-icon">
@@ -10,22 +10,23 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="row mt-3">
+  </div>-->
+  <app-summary [gridConfig]="types" [module]="'master'" [entityName] ="'documentType'" [fieldsToShow] ="fieldsToShow" [filedsofActivity] ="filedsofActivity"></app-summary>
+  <!--<div class="row mt-3">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
         <div class="card-group-scroll">
         <div *ngFor="let auditConfig of types; let i = index">
           <div class="card mb-3">
             <div class="card-body">
-              
+
               <div class="row">
                 <div class="row">
                   <div class="col-label"><strong>Version:</strong></div>
                   <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
               </div>
             </div>
-              
+
 
 
                 <div class="row">
@@ -34,9 +35,9 @@
                   </div>
                   <div class="col-sm-9">
                     {{ auditConfig.EntityInfo.Documenttypename }}
-                  </div>                 
+                  </div>
                 </div>
-                
+
 
                 <div class="row">
                   <div class="col-sm-3">
@@ -44,9 +45,9 @@
                   </div>
                   <div class="col-sm-9">
                     {{ auditConfig.EntityInfo.documenttypeprefix }}
-                  </div>                 
+                  </div>
                 </div>
-            
+
 
                 <div class="row">
                   <div class="col-sm-3">
@@ -54,7 +55,7 @@
                   </div>
                   <div class="col-sm-9">
                     {{ auditConfig.EntityInfo.Description }}
-                  </div>                 
+                  </div>
                 </div>
 
 
@@ -64,7 +65,7 @@
                   </div>
                   <div class="col-sm-9">
                     {{ auditConfig.EntityInfo.Assigntodepartment }}
-                  </div>                 
+                  </div>
                 </div>
 
 
@@ -75,10 +76,10 @@
                   <div class="col-sm-9">
                     {{ auditConfig.EntityInfo.CreatedBy }}
                   </div>
-                </div>    
+                </div>
 
 
-                
+
                 <div class="row">
                   <div class="col-sm-3">
                     <strong>Initiated On:</strong>
@@ -86,7 +87,7 @@
                   <div class="col-sm-9">
                     {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}
                   </div>
-                </div>  
+                </div>-->
 
 
                 <!-- <div class="row">
@@ -99,16 +100,16 @@
                 </div>   -->
 
 
-                
 
-                
-                 
+
+
+
               <!-- Add more rows for other properties if needed -->
-            </div>
+            <!--</div>
           </div>
         </div>
       </div>
       </div>
     </div>
-  </div>
-</div>
+  </div>-->
+<!--</div>-->
