--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!--<div class="container-fluid">
   <div class="row">
       <div class="col">
           <div class="d-flex justify-content-between align-items-center">
@@ -16,113 +16,112 @@
   </div>
   <div class="row mt-3">
       <div class="col">
-          <div class="p-4 bg-white shadow-dark rounded-2">
-              <!-- Initiation Section -->
-              <div>
-                  <h5 class="section-title">Initiation & Modification</h5>
-                  <div class="card-group-scroll">
-                      <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status !== 'IN-PROGRESS'}">
-                          <div class="card-body">
-                            <div class="row">
-                              <div class="col-label"><strong>Version:</strong></div>
-                              <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
-                          </div>
-                             
+          <div class="p-4 bg-white shadow-dark rounded-2">-->
+<!-- Initiation Section -->
+<!--<div>
+    <h5 class="section-title">Initiation & Modification</h5>
+    <div class="card-group-scroll">
+        <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status !== 'IN-PROGRESS'}">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-label"><strong>Version:</strong></div>
+                <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
+            </div>
 
 
-                              
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Document Title:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.documenttitle }}
-                                </div>                 
-                              </div>
-                              
-            
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Document Number:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.documentno }}
-                                </div>                 
-                              </div>
-                          
-            
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Department:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.department }}
-                                </div>                 
-                              </div>
-            
-            
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Template Name:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.template }}
-                                </div>     
-            
-                              </div>
-            
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Initiator Comments:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.details }}
-                                </div>                                   
-                              </div>
-            
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Template Name:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.template }}
-                                </div>                 
-                              </div>
-            
-            
-            
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Prepared By:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.CreatedBy }}
-                                </div>
-                              </div>    
-            
-            
-                              
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <strong>Prepared On:</strong>
-                                </div>
-                                <div class="col-sm-9">
-                                  {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm'  }}
-                                </div>
-                              </div>  
-            
-            
-                                            <div class="row">
-                                  <div class="col-sm-3"><strong>Status:</strong></div>
-                                  <div class="col-sm-9 bold-status">{{ auditConfig.EntityInfo.Status }}</div>
-                              </div>
-                          </div>
-                      </div>
+
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Document Title:</strong>
                   </div>
-              </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.documenttitle }}
+                  </div>
+                </div>
 
-              <!-- Review, Approve, Return, Reject Section -->
-              <div>
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Document Number:</strong>
+                  </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.documentno }}
+                  </div>
+                </div>
+
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Department:</strong>
+                  </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.department }}
+                  </div>
+                </div>
+
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Template Name:</strong>
+                  </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.template }}
+                  </div>
+
+                </div>
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Initiator Comments:</strong>
+                  </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.details }}
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Template Name:</strong>
+                  </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.template }}
+                  </div>
+                </div>
+
+
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Prepared By:</strong>
+                  </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.CreatedBy }}
+                  </div>
+                </div>
+
+
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <strong>Prepared On:</strong>
+                  </div>
+                  <div class="col-sm-9">
+                    {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm'  }}
+                  </div>
+                </div>
+
+
+                              <div class="row">
+                    <div class="col-sm-3"><strong>Status:</strong></div>
+                    <div class="col-sm-9 bold-status">{{ auditConfig.EntityInfo.Status }}</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>-->
+<!-- Review, Approve, Return, Reject Section -->
+<!--<div>
                   <h5 class="section-title">Review/Approve/Return</h5>
                   <div class="card-group-scroll">
                       <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status === 'IN-PROGRESS'}">
@@ -137,60 +136,60 @@
                               </div>
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.documenttitle }}
-                              </div>                 
+                              </div>
                             </div>
-                            
-          
+
+
                             <div class="row">
                               <div class="col-sm-3">
                                 <strong>Document Number:</strong>
                               </div>
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.documentno }}
-                              </div>                 
+                              </div>
                             </div>
-                        
-          
+
+
                             <div class="row">
                               <div class="col-sm-3">
                                 <strong>Department:</strong>
                               </div>
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.department }}
-                              </div>                 
+                              </div>
                             </div>
-          
-          
+
+
                             <div class="row">
                               <div class="col-sm-3">
                                 <strong>Template Name:</strong>
                               </div>
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.template }}
-                              </div>     
-          
+                              </div>
+
                             </div>
-          
+
                             <div class="row">
                               <div class="col-sm-3">
                                 <strong>Initiator Comments:</strong>
                               </div>
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.details }}
-                              </div>                                   
+                              </div>
                             </div>
-          
+
                             <div class="row">
                               <div class="col-sm-3">
                                 <strong>Template Name:</strong>
                               </div>
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.template }}
-                              </div>                 
+                              </div>
                             </div>
-          
-          
-          
+
+
+
                             <div class="row">
                               <div class="col-sm-3">
                                 <strong>Prepared By:</strong>
@@ -198,10 +197,10 @@
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.CreatedBy }}
                               </div>
-                            </div>    
-          
-          
-                            
+                            </div>
+
+
+
                             <div class="row">
                               <div class="col-sm-3">
                                 <strong>Prepared On:</strong>
@@ -209,7 +208,7 @@
                               <div class="col-sm-9">
                                 {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm'  }}
                               </div>
-                            </div>  
+                            </div>
 
 
 <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Reviewed'">
@@ -220,7 +219,7 @@
                       {{ auditConfig.EntityInfo.ModifiedBy }}
                   </div>
               </div>
-          
+
                               <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Approved'">
                                 <div class="col-sm-3">
                                     <strong>Approved By:</strong>
@@ -229,8 +228,8 @@
                                     {{ auditConfig.EntityInfo.ModifiedBy }}
                                 </div>
                             </div>
-              
-              
+
+
                             <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Returned'">
                               <div class="col-sm-3">
                                   <strong>Returned By:</strong>
@@ -239,9 +238,9 @@
                                   {{ auditConfig.EntityInfo.ModifiedBy }}
                               </div>
                           </div>
-              
-              
-              
+
+
+
                           <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Rejected'">
                             <div class="col-sm-3">
                                 <strong>Rejected By:</strong>
@@ -254,8 +253,8 @@
                           <div class="col-label"><strong>Reason(s):</strong></div>
                           <div class="col-value">{{ auditConfig.EntityInfo.reason }}</div>
                       </div>
-                     
-              
+
+
                               <div class="row">
                                   <div class="col-sm-3"><strong>Status:</strong></div>
                                   <div class="col-sm-9 bold-status">{{ auditConfig.EntityInfo.Status }}</div>
@@ -263,10 +262,12 @@
                           </div>
                       </div>
                   </div>
-              </div>
-
-              <!-- Add more sections or rows for other properties if needed -->
-          </div>
+              </div>-->
+<!-- Add more sections or rows for other properties if needed -->
+<!--</div>
       </div>
   </div>
-</div>
+</div>-->
+
+<app-summary [gridConfig]="types" [module]="'manager'" [entityName]="'preparaation'" [fieldsToShow]="fieldsToShow" [filedsofActivity]="filedsofActivity"></app-summary>
+
