master and admin revision number ,api and db chnages

--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-plant-add-page/audit-plant-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-plant-add-page/audit-plant-add-page.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="container-fluid">
   <div class="row">
     <div class="col">
@@ -88,21 +88,6 @@
                 </div>  
 
 
-                <!-- <div class="row">
-                  <div class="col-sm-3">
-                    <strong>Status:</strong>
-                  </div>
-                  <div class="col-sm-9">
-                    {{ auditConfig.EntityInfo.Status }}
-                  </div>
-                </div>   -->
-
-
-                
-
-                
-                 
-              <!-- Add more rows for other properties if needed -->
             </div>
           </div>
         </div>
@@ -110,4 +95,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+<app-summary [gridConfig]="types" [module]="'master'" [entityName] ="'documentType'" [fieldsToShow] ="fieldsToShow" [filedsofActivity] ="filedsofActivity"></app-summary>
