--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-user-mananagement-add-page/audit-user-mananagement-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-user-mananagement-add-page/audit-user-mananagement-add-page.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="container-fluid">
     <div class="row">
       <div class="col">
@@ -126,7 +126,6 @@
 
                   
                    
-                <!-- Add more rows for other properties if needed -->
               </div>
             </div>
           </div>
@@ -135,4 +134,6 @@
       </div>
     </div>
   </div>
-  
+   -->
+
+   <app-summary [gridConfig]="types" [module]="'master'" [entityName] ="'documentType'" [fieldsToShow] ="fieldsToShow" [filedsofActivity] ="filedsofActivity"></app-summary>
