--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-dep-add/audit-dep-add.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-dep-add/audit-dep-add.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="row">
       <div class="col">
           <div class="d-flex justify-content-between align-items-center">
@@ -75,4 +75,7 @@
           </div>
       </div>
   </div>
-</div>
+</div> -->
+
+<app-summary [gridConfig]="types" [module]="'master'" [entityName] ="'documentType'" [fieldsToShow] ="fieldsToShow" [filedsofActivity] ="filedsofActivity"></app-summary>
+
