--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audit-workflow-type-new-page/audit-workflow-type-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audit-workflow-type-new-page/audit-workflow-type-new-page.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="container-fluid">
   <div class="row">
     <div class="col">
@@ -138,13 +138,14 @@
                
 
                
-                 
+                  -->
               <!-- Add more rows for other properties if needed -->
-            </div>
+            <!-- </div>
           </div>
         </div>
       </div>
       </div>
     </div>
   </div>
-</div>
+</div> -->
+<app-summary [gridConfig]="types" [module]="'master'" [entityName] ="'DocumentName'" [fieldsToShow] ="fieldsToShow" [filedsofActivity] ="filedsofActivity"></app-summary>
