--- a/VlimsApp/ClientApp/src/app/common/summary/summary.component.html
+++ b/VlimsApp/ClientApp/src/app/common/summary/summary.component.html
@@ -8,7 +8,7 @@
 
     <ng-container *ngFor="let item of gridConfig">
       <div class="m-3">
-        <p-panel class=" col-lg-5" header="Revision 4" [toggleable]="true">
+        <p-panel class=" col-lg-5" header="Revision {{item.RevisionNumber}}" [toggleable]="true">
           <div class="d-flex flex-column py-3 px-4">
             <ng-container *ngFor="let field of fieldsToShow">
               <div class="form-group row">
@@ -30,7 +30,7 @@
           <div class="m-3">
             <div class="d-flex">
               <div class="activity-time col-lg-3 ">
-                <p>16-10-2023</p>
+                <p>{{item.CreatedDate}}</p>
               </div>
               <div class="activity-items col-lg-9">
                 <ul>
@@ -40,53 +40,7 @@
                     </div>
                     <div class="activity-info ms-2">
                       <p class="mb-0 p-date-styles">
-                        <span class="name-styles">John Doe</span> Modified <span class="p-date-styles"></span>
-                      </p>
-                      <span class="activity-date">04:05am IST</span>
-                    </div>
-
-                  </li>
-
-                </ul>
-              </div>
-            </div>
-            <div class="d-flex">
-
-              <div class="activity-time col-lg-3">
-                <p>16-10-2023</p>
-              </div>
-              <div class="activity-items col-lg-9 ">
-                <ul>
-                  <li class="d-flex">
-                    <div class="activity-icon">
-                      <i class="fa-regular fa-eye"></i>
-                    </div>
-                    <div class="activity-info ms-2">
-                      <p class="mb-0 p-date-styles">
-                        <span class="name-styles">Stef Bogaerts</span> Reviewed<span class="p-date-styles"></span>
-                      </p>
-                      <span class="activity-date">04:05am IST</span>
-                    </div>
-
-                  </li>
-
-                </ul>
-              </div>
-            </div>
-
-            <div class="d-flex">
-              <div class="activity-time col-lg-3">
-                <p>16-10-2023</p>
-              </div>
-              <div class="activity-items col-lg-9">
-                <ul>
-                  <li class="d-flex">
-                    <div class="activity-icon">
-                      <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                    <div class="activity-info ms-2">
-                      <p class="mb-0 p-date-styles">
-                        <span class="name-styles">Alice Johnson</span> Approved <span class="p-date-styles"></span>
+                        <span class="name-styles">{{item.UserName}}</span> Modified <span class="p-date-styles"></span>
                       </p>
                       <span class="activity-date">04:05am IST</span>
                     </div>
