--- a/VlimsApp/ClientApp/src/app/common/summary/summary.component.html
+++ b/VlimsApp/ClientApp/src/app/common/summary/summary.component.html
@@ -4,7 +4,7 @@
       <h4 class="page-title">Document Type Audit Trails</h4>
     </div>
   </div>
-  <div class="col-lg-12" *ngIf="module == 'master'">
+  <div class="col-lg-12" *ngIf="module == 'master' || module == '' ">
 
     <ng-container *ngFor="let item of gridConfig">
       <div class="m-3">
