--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
@@ -125,4 +125,4 @@
         </div>
     </div>
 </div> -->
-<app-summary [gridConfig]="types" [module]="'manager'" [entityName]="'preparaation'" [fieldsToShow]="fieldsToShow" [filedsofActivity]="filedsofActivity"></app-summary>
+<app-summary [gridConfig]="types" [module]="'manager'" [entityName]="'request'" [fieldsToShow]="fieldsToShow" [filedsofActivity]="filedsofActivity"></app-summary>
