--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.html
@@ -268,6 +268,6 @@
       </div>
   </div>
 </div>-->
-
-<app-summary [gridConfig]="types" [module]="'manager'" [entityName]="'preparaation'" [fieldsToShow]="fieldsToShow" [filedsofActivity]="filedsofActivity"></app-summary>
-
+<ng-container *ngIf="groupedRecords">
+  <app-summary [gridConfig]="groupedRecords" [module]="'manager'" [entityName]="'preparation'" [fieldsToShow]="fieldsToShow" [filedsofActivity]="filedsofActivity"></app-summary>
+</ng-container>
