--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-print-new-page/audit-print-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-print-new-page/audit-print-new-page.component.html
@@ -1,161 +1,4 @@
-<div class="container-fluid">
-  <div class="row">
-      <div class="col">
-          <div class="d-flex justify-content-between align-items-center">
-              <h4 class="page-title">
-                  <span class="bold-text">Document Print</span><br>
-                  <span class="bold-text">Audit Trails</span>
-              </h4>
-              <div class="back-icon">
-                  <a href="javascript:void(0);" onclick="history.back();">
-                      <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-                  </a>
-              </div>
-          </div>
-      </div>
-  </div>
-  <div class="row mt-3">
-      <div class="col">
-          <div class="p-4 bg-white shadow-dark rounded-2">
 
-              <!-- Initiation Section -->
-              <h5 class="section-title">Initiation</h5>
-              <div class="card-group-scroll">
-                  <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status !== 'Active'}">
-                      <div class="card-body">
-                        <div class="row">
-                            <div class="col-label"><strong>Version:</strong></div>
-                            <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
-                        </div> 
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Document Title:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.documenttitle }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Print Type:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.printtype }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Document Number:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.DocumentNumber }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>No Of Copies:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.noofcopies }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Workflow:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.workflow }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Reasons:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.reason }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Template:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.Template }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>PrintCopy:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.PrintCopy }}</div>
-                          </div>
-                        
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Printed By:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedBy }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Printed Date:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</div>
-                          </div>
-                          <div class="row">
-                            <div class="col-sm-3"><strong>Status:</strong></div>
-                            <div class="col-sm-9 bold-status">{{ auditConfig.EntityInfo.Status }}</div>
-                        </div>
-                      </div>
-                  </div>
-              </div>
-
-              <!-- Review, Approve, Return, Reject Section -->
-              <h5 class="section-title">Review/Approve/Return/Reject</h5>
-              <div class="card-group-scroll">
-                  <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status === 'Active'}">
-                      <div class="card-body">
-                        <div class="row">
-                            <div class="col-label"><strong>Version:</strong></div>
-                            <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
-                        </div> 
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Document Title:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.documenttitle }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Print Type:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.printtype }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Document Number:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.DocumentNumber }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>No Of Copies:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.noofcopies }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Workflow:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.workflow }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Reasons:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.reason }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Template:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.Template }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>PrintCopy:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.PrintCopy }}</div>
-                          </div>
-                          
-                          <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Reviewed'">
-                              <div class="col-sm-3"><strong>Reviewed By:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
-                          </div>
-                          <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Approved'">
-                              <div class="col-sm-3"><strong>Approved By:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
-                          </div>
-                          <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Returned'">
-                              <div class="col-sm-3"><strong>Returned By:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
-                          </div>
-                          <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Rejected'">
-                              <div class="col-sm-3"><strong>Rejected By:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Printed By:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedBy }}</div>
-                          </div>
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Printed Date:</strong></div>
-                              <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</div>
-                          </div>
-                          <div class="row">
-                            <div class="col-sm-3"><strong>Reason(s):</strong></div>
-                            <div class="col-sm-9">{{ auditConfig.EntityInfo.ReasonOrRemarks }}</div>
-                        </div>
-                          <div class="row">
-                            <div class="col-sm-3"><strong>Status:</strong></div>
-                            <div class="col-sm-9 bold-status">{{ auditConfig.EntityInfo.Status }}</div>
-                        </div>
-                      </div>
-                  </div>
-              </div>
-
-              <!-- Add more sections or rows for other properties if needed -->
-          </div>
-      </div>
-  </div>
-</div>
+<ng-container *ngIf="types">
+  <app-summary [gridConfig]="types" [module]="'manager'" [entityName]="'print'" [fieldsToShow]="fieldsToShow" [filedsofActivity]="filedsofActivity"></app-summary>
+</ng-container>
